--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/react": "^17.0.34",
     "autoprefixer": "^10.4.0",
+    "dotenv": "^10.0.0",
     "gatsby": "^4.1.0",
     "gatsby-plugin-postcss": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
